--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 //file:noinspection GradlePackageVersionRange
 plugins {
-    id 'fabric-loom' version '1.5-SNAPSHOT'
+    id 'fabric-loom' version '1.6-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -32,7 +32,7 @@ dependencies {
     modLocalRuntime "dev.architectury:architectury-fabric:8.1.73"
 
     // Stacc
-    modLocalRuntime include("maven.modrinth:stacc-api:${project.stacc_version}")
+    //modLocalRuntime include("maven.modrinth:stacc-api:${project.stacc_version}")
 
     // ModMenu
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
@@ -55,8 +55,8 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-    it.options.release = 17
+    // Minecraft 1.21 upwards uses Java 21.
+    it.options.release = 21
 }
 
 java {
@@ -65,8 +65,8 @@ java {
     // If you remove this line, sources will not be generated.
     withSourcesJar()
 
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
